poc_vpc_vpn_tgw.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: PoC - Site-to-Site VPN between two VPCs via Transit Gateway

Parameters:
  TestVpcACidr:
    Type: String
    Default: 10.10.0.0/16
  TestVpcBCidr:
    Type: String
    Default: 10.20.0.0/16
  TestVpcCCidr:
    Type: String
    Default: 10.30.0.0/16
  PublicSubnetACidr:
    Type: String
    Default: 10.10.1.0/24
  PublicSubnetBCidr:
    Type: String
    Default: 10.20.1.0/24
  PublicSubnetCCidr:
    Type: String
    Default: 10.30.1.0/24
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: SSH key pair name for EC2 instance access

Resources:

  # VPC A (Org A)
  TestVpcA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref TestVpcACidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-A

  SubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TestVpcA
      CidrBlock: !Ref PublicSubnetACidr
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']

  InternetGatewayA:
    Type: AWS::EC2::InternetGateway

  AttachIGWToTestVpcA:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TestVpcA
      InternetGatewayId: !Ref InternetGatewayA

  RouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TestVpcA

  RouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayA

  TGWRouteToB:
    Type: AWS::EC2::Route
    DependsOn:
      - TransitGateway
      - TGWAttachmentA
    Properties:
      RouteTableId: !Ref RouteTableA
      DestinationCidrBlock: !Ref TestVpcBCidr
      TransitGatewayId: !Ref TransitGateway

  SubnetRouteAssocA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetA
      RouteTableId: !Ref RouteTableA

  # VPC B (ICE Sim)
  TestVpcB:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref TestVpcBCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-B

  SubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TestVpcB
      CidrBlock: !Ref PublicSubnetBCidr
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']

  InternetGatewayB:
    Type: AWS::EC2::InternetGateway

  AttachIGWToTestVpcB:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TestVpcB
      InternetGatewayId: !Ref InternetGatewayB

  RouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TestVpcB

  RouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayB

  TGWRouteToA:
    Type: AWS::EC2::Route
    DependsOn:
      - TransitGateway
      - TGWAttachmentB
    Properties:
      RouteTableId: !Ref RouteTableB
      DestinationCidrBlock: !Ref TestVpcACidr
      TransitGatewayId: !Ref TransitGateway

  SubnetRouteAssocB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetB
      RouteTableId: !Ref RouteTableB

  # VPC C (Segmentation Test)
  TestVpcC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref TestVpcCCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-C

  SubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TestVpcC
      CidrBlock: !Ref PublicSubnetCCidr
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']

  RouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TestVpcC

  SubnetRouteAssocC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetC
      RouteTableId: !Ref RouteTableC

  TGWAttachmentC:
    Type: AWS::EC2::TransitGatewayVpcAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref TestVpcC
      SubnetIds:
        - !Ref SubnetC

  TGWRouteTableC:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway

  TGWAssocC:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentC
      TransitGatewayRouteTableId: !Ref TGWRouteTableC

  TGWPropagateCtoB:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentC
      TransitGatewayRouteTableId: !Ref TGWRouteTableB

  TGWPropagateBtoC:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentB
      TransitGatewayRouteTableId: !Ref TGWRouteTableC

  # Transit Gateway
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      Description: PoC Transit Gateway
      DefaultRouteTableAssociation: disable
      DefaultRouteTablePropagation: disable

  TGWRouteTableA:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway

  TGWRouteTableB:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway

  TGWAttachmentA:
    Type: AWS::EC2::TransitGatewayVpcAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref TestVpcA
      SubnetIds:
        - !Ref SubnetA

  TGWAttachmentB:
    Type: AWS::EC2::TransitGatewayVpcAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref TestVpcB
      SubnetIds:
        - !Ref SubnetB

  TGWAssocA:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentA
      TransitGatewayRouteTableId: !Ref TGWRouteTableA

  TGWAssocB:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentB
      TransitGatewayRouteTableId: !Ref TGWRouteTableB

  TGWPropagateBtoA:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentB
      TransitGatewayRouteTableId: !Ref TGWRouteTableA

  TGWPropagateAtoB:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref TGWAttachmentA
      TransitGatewayRouteTableId: !Ref TGWRouteTableB

  CustomerGateway:
    Type: AWS::EC2::CustomerGateway
    Properties:
      BgpAsn: 65000
      IpAddress: "1.1.1.1"
      Type: ipsec.1
      Tags:
        - Key: Name
          Value: DummyCGW

  VPNConnection:
    Type: AWS::EC2::VPNConnection
    Properties:
      Type: ipsec.1
      CustomerGatewayId: !Ref CustomerGateway
      TransitGatewayId: !Ref TransitGateway
      StaticRoutesOnly: true
      VpnTunnelOptionsSpecifications:
        - PreSharedKey: test123456789
          TunnelInsideCidr: 169.254.10.0/30
        - PreSharedKey: test987654321
          TunnelInsideCidr: 169.254.11.0/30

  SGAllowAllA:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all traffic from VPC-B
      VpcId: !Ref TestVpcA
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Ref TestVpcBCidr
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 194.34.235.43/32

  SGAllowAllB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all traffic from VPC-A
      VpcId: !Ref TestVpcB
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Ref TestVpcACidr
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 194.34.235.43/32

  SGAllowAllC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all traffic from VPC-B
      VpcId: !Ref TestVpcC
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Ref TestVpcBCidr
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 194.34.235.43/32

  InstanceA:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: ami-0152ea7e79f25bb5b
      SubnetId: !Ref SubnetA
      SecurityGroupIds:
        - !Ref SGAllowAllA
      Tags:
        - Key: Name
          Value: EC2-A

  InstanceAPrivate:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: ami-0152ea7e79f25bb5b
      SubnetId: !Ref SubnetA
      SecurityGroupIds:
        - !Ref SGAllowAllA
      Tags:
        - Key: Name
          Value: EC2-A-Private

  InstanceB:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: ami-0152ea7e79f25bb5b
      SubnetId: !Ref SubnetB
      SecurityGroupIds:
        - !Ref SGAllowAllB
      Tags:
        - Key: Name
          Value: EC2-B

  InstanceC:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: ami-0152ea7e79f25bb5b
      SubnetId: !Ref SubnetC
      SecurityGroupIds:
        - !Ref SGAllowAllC
      Tags:
        - Key: Name
          Value: EC2-C

Outputs:
  TestVpcAId:
    Value: !Ref TestVpcA
  TestVpcBId:
    Value: !Ref TestVpcB
  TestVpcCId:
    Value: !Ref TestVpcC
  TransitGatewayId:
    Value: !Ref TransitGateway
  TGWRouteTableAId:
    Value: !Ref TGWRouteTableA
  TGWRouteTableBId:
    Value: !Ref TGWRouteTableB
  TGWRouteTableCId:
    Value: !Ref TGWRouteTableC
  VPNConnectionId:
    Value: !Ref VPNConnection
  InstanceAId:
    Value: !Ref InstanceA
  InstanceBId:
    Value: !Ref InstanceB
  InstanceCId:
    Value: !Ref InstanceC
  InstanceAPrivateId:
    Value: !Ref InstanceAPrivate
